# BA_Prototypes

./: .gitignore  .sonarcloud.properties  sonar-project.properties
capjava-microservices/cart-service/java-cart/: .gitignore  mta.yaml  package.json  pom.xml
capjava-microservices/checkout-service/java-checkout/: mta.yaml  package.json  pom.xml
capjava-microservices/product-service/: package.json
capjava-microservices/product-service/java-product/: .gitignore  (+3 more)
capjs-microservices/cart-service/: .gitignore  mta.yaml  package.json
capjs-microservices/checkout-service/: .gitignore  mta.yaml  package.json
capjs-microservices/product-service/: .gitignore  mta.yaml  package.json
cpp-microservices/cart-service/: CMakeLists.txt  manifest.yml
cpp-microservices/checkout-service/: CMakeLists.txt  manifest.yml
cpp-microservices/cpp-microservice-example/: curl-format.txt
cpp-microservices/product-service/: CMakeLists.txt  manifest.yml
cpp-microservices/product-service/src/: main.cpp
java-microservices/cart-service/: manifest.yml  pom.xml
java-microservices/checkout-service/: manifest.yml  pom.xml
java-microservices/product-service/: manifest.yml  pom.xml
node-microservices/cart-service/: index.js  package.json
node-microservices/checkout-service/: index.js  package.json
node-microservices/product-service/: index.js  package.json
python-microservices/cart-service/: Procfile  cart-service.py  requirements.txt
python-microservices/checkout-service/: Procfile  checkout-service.py
python-microservices/product-service/: Procfile  product-service.py
(+42 files in other folders)
